[gd_scene load_steps=79 format=3 uid="uid://dt58it6tefknc"]

[ext_resource type="Script" path="res://scene/mob/fluzar.gd" id="1_jrggg"]
[ext_resource type="Shader" path="res://scene/mob/frog.gdshader" id="2_u20l5"]
[ext_resource type="Texture2D" uid="uid://t217k0qshdws" path="res://assets/environment/scifi/anims/fluzar.png" id="8_81p01"]
[ext_resource type="Texture2D" uid="uid://cbdtupnqg0bnq" path="res://assets/environment/scifi/anims/scifi_alien_run_1.png" id="10_qlioh"]
[ext_resource type="Texture2D" uid="uid://dp8jhej0p6s3y" path="res://assets/environment/scifi/anims/scifi_alien_run_2.png" id="11_cjxxn"]
[ext_resource type="Texture2D" uid="uid://3xcl57pew356" path="res://assets/environment/scifi/anims/scifi_alien_run_3.png" id="12_oybbu"]
[ext_resource type="Texture2D" uid="uid://dc64a1cspkdkp" path="res://assets/environment/scifi/anims/scifi_alien_run_4.png" id="13_n2qv6"]
[ext_resource type="Texture2D" uid="uid://yo30a3bmye2k" path="res://assets/environment/scifi/anims/scifi_alien_run_5.png" id="14_50bxj"]
[ext_resource type="Texture2D" uid="uid://mbvoamf4musw" path="res://assets/environment/scifi/anims/fluzar_freezing.png" id="14_o6vwd"]
[ext_resource type="Texture2D" uid="uid://ddkbmqrrj2ty5" path="res://assets/environment/scifi/anims/scifi_alien_bite_1.png" id="15_xlt48"]
[ext_resource type="Script" path="res://scene/mob/hp_hitbox.gd" id="16_s2cs6"]
[ext_resource type="Texture2D" uid="uid://b1htc2nthsbsm" path="res://assets/environment/scifi/anims/scifi_alien_bite_2.png" id="16_sn602"]
[ext_resource type="Texture2D" uid="uid://bhwtxracracqr" path="res://assets/environment/scifi/anims/frozen_fluzar.png" id="17_d22g3"]
[ext_resource type="Texture2D" uid="uid://bd32bs3pmr1tk" path="res://assets/environment/scifi/anims/scifi_alien_bite_3.png" id="17_nebpy"]
[ext_resource type="Texture2D" uid="uid://b36owicapyp61" path="res://assets/environment/scifi/anims/scifi_alien_bite_4.png" id="18_ep1pe"]
[ext_resource type="Texture2D" uid="uid://cn2vtm64igjwo" path="res://assets/environment/scifi/anims/scifi_alien_bite_5.png" id="19_56u5k"]
[ext_resource type="Texture2D" uid="uid://j76kbvymmq5w" path="res://assets/gui/pixelUIart/enemyhpempty.png" id="24_74qwk"]
[ext_resource type="Texture2D" uid="uid://dkgn6a61bmodd" path="res://assets/gui/pixelUIart/enemyhpfull.png" id="25_5udrx"]
[ext_resource type="Texture2D" uid="uid://33derdmhojkb" path="res://assets/gui/pixelUIart/enemymischieffull.png" id="26_72r52"]
[ext_resource type="Texture2D" uid="uid://duuifkqgq4m4t" path="res://assets/environment/light.png" id="27_e3w21"]
[ext_resource type="Script" path="res://script/statemachine.gd" id="28_762sy"]
[ext_resource type="Script" path="res://scene/mob/FluzarStateMachine.gd" id="28_rv6ha"]
[ext_resource type="Script" path="res://scene/mob/Label.gd" id="30_4n2by"]

[sub_resource type="CircleShape2D" id="CircleShape2D_txbkk"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vut2b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kmicr"]
resource_local_to_scene = true
shader = ExtResource("2_u20l5")
shader_parameter/origin = Color(0.223529, 0.262745, 0.25098, 1)
shader_parameter/new = Color(0.223529, 0.262745, 0.25098, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_5buom"]
atlas = ExtResource("8_81p01")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ctqi"]
atlas = ExtResource("8_81p01")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf7cm"]
atlas = ExtResource("8_81p01")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nvva"]
atlas = ExtResource("8_81p01")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7adr8"]
atlas = ExtResource("8_81p01")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2oi7"]
atlas = ExtResource("8_81p01")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ntku"]
atlas = ExtResource("8_81p01")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssry4"]
atlas = ExtResource("8_81p01")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiw7n"]
atlas = ExtResource("8_81p01")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_usewa"]
atlas = ExtResource("8_81p01")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o03hi"]
atlas = ExtResource("8_81p01")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwryi"]
atlas = ExtResource("8_81p01")
region = Rect2(880, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4d26"]
atlas = ExtResource("14_o6vwd")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qhxf"]
atlas = ExtResource("14_o6vwd")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5vjk"]
atlas = ExtResource("14_o6vwd")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnih6"]
atlas = ExtResource("8_81p01")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_brus7"]
atlas = ExtResource("8_81p01")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dem6"]
atlas = ExtResource("8_81p01")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfh55"]
atlas = ExtResource("8_81p01")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmtar"]
atlas = ExtResource("8_81p01")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8nmf"]
atlas = ExtResource("8_81p01")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfrbr"]
atlas = ExtResource("8_81p01")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkapq"]
atlas = ExtResource("8_81p01")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0n2a"]
atlas = ExtResource("8_81p01")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mav2m"]
atlas = ExtResource("8_81p01")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k727e"]
atlas = ExtResource("8_81p01")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nl2g"]
atlas = ExtResource("8_81p01")
region = Rect2(880, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm141"]
atlas = ExtResource("17_d22g3")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrsak"]
atlas = ExtResource("17_d22g3")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dkn8"]
atlas = ExtResource("17_d22g3")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjl76"]
atlas = ExtResource("17_d22g3")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tadt3"]
atlas = ExtResource("17_d22g3")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8red"]
atlas = ExtResource("17_d22g3")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rhhe"]
atlas = ExtResource("17_d22g3")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_72j37"]
atlas = ExtResource("17_d22g3")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_36qyw"]
atlas = ExtResource("17_d22g3")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwadg"]
atlas = ExtResource("17_d22g3")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuaow"]
atlas = ExtResource("17_d22g3")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_neaf8"]
atlas = ExtResource("17_d22g3")
region = Rect2(880, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h1jf"]
atlas = ExtResource("17_d22g3")
region = Rect2(960, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp22a"]
atlas = ExtResource("17_d22g3")
region = Rect2(1040, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w026"]
atlas = ExtResource("17_d22g3")
region = Rect2(1120, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lll88"]
atlas = ExtResource("17_d22g3")
region = Rect2(1200, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oegho"]
atlas = ExtResource("17_d22g3")
region = Rect2(1280, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1njbm"]
atlas = ExtResource("17_d22g3")
region = Rect2(1360, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vtiq"]
atlas = ExtResource("17_d22g3")
region = Rect2(1440, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm5kg"]
atlas = ExtResource("17_d22g3")
region = Rect2(1520, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_an24v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5buom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ctqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf7cm")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nvva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7adr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2oi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ntku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssry4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiw7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usewa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5buom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ctqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf7cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o03hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwryi")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qlioh")
}, {
"duration": 1.0,
"texture": ExtResource("11_cjxxn")
}, {
"duration": 1.0,
"texture": ExtResource("12_oybbu")
}, {
"duration": 1.0,
"texture": ExtResource("13_n2qv6")
}, {
"duration": 1.0,
"texture": ExtResource("14_50bxj")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_xlt48")
}, {
"duration": 1.0,
"texture": ExtResource("16_sn602")
}, {
"duration": 1.0,
"texture": ExtResource("17_nebpy")
}, {
"duration": 1.0,
"texture": ExtResource("18_ep1pe")
}, {
"duration": 1.0,
"texture": ExtResource("19_56u5k")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf7cm")
}],
"loop": true,
"name": &"dead",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4d26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qhxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5vjk")
}],
"loop": false,
"name": &"frozen",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnih6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brus7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dem6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfh55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmtar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8nmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfrbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkapq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0n2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mav2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k727e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nl2g")
}],
"loop": true,
"name": &"happy",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm141")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrsak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dkn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjl76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tadt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8red")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rhhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72j37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36qyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwadg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuaow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neaf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h1jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp22a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w026")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lll88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oegho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1njbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vtiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm5kg")
}],
"loop": true,
"name": &"ice_block",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_afgcd"]
radius = 313.014

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxkvq"]
size = Vector2(60, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_ac8ea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxrqe"]
size = Vector2(43, 9.5)

[node name="fluzar" type="CharacterBody2D" groups=["mob"]]
collision_layer = 64
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_jrggg")
metadata/_edit_horizontal_guides_ = [-64.0, 10.0, -33.0]
metadata/_edit_vertical_guides_ = [-50.0, -33.0, -32.0, -93.0]

[node name="alive_shape" type="CollisionShape2D" parent="." groups=["mob"]]
visible = false
position = Vector2(1, -1)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_txbkk")

[node name="dead_shape" type="CollisionShape2D" parent="." groups=["mob"]]
visible = false
position = Vector2(0, 6)
scale = Vector2(1.30957, 0.780737)
shape = SubResource("CapsuleShape2D_vut2b")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_kmicr")
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_an24v")
animation = &"Idle"

[node name="playerdetection" type="Area2D" parent="." groups=["mob"]]
visible = false
scale = Vector2(2.13034, 0.897092)
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdetection"]
shape = SubResource("CircleShape2D_afgcd")

[node name="hypnosphere" type="Area2D" parent="." groups=["mob"]]
visible = false
scale = Vector2(0.394784, -0.225166)
collision_layer = 64
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="hypnosphere"]
shape = SubResource("CircleShape2D_afgcd")

[node name="Attackbox" type="Area2D" parent="." groups=["mob"]]
visible = false
collision_layer = 64
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
position = Vector2(-20, -18.5)
shape = SubResource("RectangleShape2D_rxkvq")

[node name="AttackTimer" type="Timer" parent="Attackbox"]
wait_time = 6.0
autostart = true

[node name="Hitbox" type="Area2D" parent="." groups=["mob"]]
visible = false
position = Vector2(0, 22)
collision_layer = 64
collision_mask = 192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["mob"]]
position = Vector2(1, -23)
scale = Vector2(1.86347, 1.75005)
shape = SubResource("CircleShape2D_ac8ea")

[node name="hp_hitbox" type="Area2D" parent="."]
position = Vector2(-23, -66)
collision_layer = 1024
collision_mask = 1024
script = ExtResource("16_s2cs6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hp_hitbox"]
position = Vector2(24, 46)
shape = SubResource("RectangleShape2D_rxrqe")

[node name="hp" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
z_index = 5
offset_left = -23.0
offset_top = -44.0
offset_right = 25.0
offset_bottom = 4.0
max_value = 140.0
step = 0.1
value = 140.0
texture_under = ExtResource("24_74qwk")
texture_progress = ExtResource("25_5udrx")

[node name="patience" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
z_index = 5
offset_left = -24.0
offset_top = -40.0
offset_right = 24.0
offset_bottom = 8.0
max_value = 120.0
step = 0.1
value = 120.0
texture_under = ExtResource("24_74qwk")
texture_progress = ExtResource("26_72r52")

[node name="Head" type="Node2D" parent="."]
visible = false
position = Vector2(-5, -17)

[node name="eyelight" type="Node2D" parent="Head"]
z_index = 1

[node name="TextureLight" type="PointLight2D" parent="Head/eyelight"]
color = Color(0, 0.972549, 0.054902, 1)
energy = 0.5
range_item_cull_mask = 515
shadow_filter = 1
shadow_filter_smooth = 20.9
shadow_item_cull_mask = 515
texture = ExtResource("27_e3w21")
texture_scale = 0.1

[node name="Shadow" type="PointLight2D" parent="Head/eyelight"]
color = Color(0, 0.905882, 0.133333, 1)
range_item_cull_mask = 515
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 20.9
shadow_item_cull_mask = 515
texture = ExtResource("27_e3w21")
texture_scale = 0.1

[node name="SMMain" type="Node2D" parent="."]
script = ExtResource("28_762sy")

[node name="EnemyStateMachine" type="Node2D" parent="."]
script = ExtResource("28_rv6ha")

[node name="Label" type="Label" parent="EnemyStateMachine"]
visible = false
offset_left = -30.0
offset_top = -35.0
offset_right = 31.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 15
text = "Idle"
horizontal_alignment = 1
script = ExtResource("30_4n2by")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.2
autostart = true

[node name="jumptimer" type="Timer" parent="NavigationAgent2D"]
one_shot = true

[node name="repathtimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 1.25
autostart = true

[node name="webstucktimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ally_timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="hover_ray" type="RayCast2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(3.375, 1.63356)
target_position = Vector2(0, 25)
hit_from_inside = true

[connection signal="body_entered" from="playerdetection" to="." method="_on_playerdetection_body_entered"]
[connection signal="body_exited" from="playerdetection" to="." method="_on_playerdetection_body_exited"]
[connection signal="body_entered" from="hypnosphere" to="." method="_on_hypnosphere_body_entered"]
[connection signal="body_exited" from="hypnosphere" to="." method="_on_hypnosphere_body_exited"]
[connection signal="body_entered" from="Attackbox" to="." method="_on_attackbox_body_entered"]
[connection signal="timeout" from="Attackbox/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="hp_hitbox" to="hp_hitbox" method="_on_area_entered"]
[connection signal="area_exited" from="hp_hitbox" to="hp_hitbox" method="_on_area_exited"]
[connection signal="overlapping" from="hp_hitbox" to="." method="_on_hp_hitbox_overlapping"]
[connection signal="value_changed" from="hp" to="." method="_on_hp_value_changed"]
[connection signal="value_changed" from="patience" to="." method="_on_patience_value_changed"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/jumptimer" to="." method="_on_jumptimer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/repathtimer" to="." method="_on_repathtimer_timeout"]
[connection signal="timeout" from="webstucktimer" to="." method="_on_webstucktimer_timeout"]
[connection signal="timeout" from="ally_timer" to="." method="_on_ally_timer_timeout"]
